Add a new enum value to base::DesktopEnvironment for Pantheon

CL [1] fixed a bug where Chrome wouldn't add any frame buttons on a
maximized browser window.  The Unity desktop environment draws these
buttons for us in the top menu bar for maximized windows, so we only
disabled these buttons on the Unity DE.

However, we were also pretending that the Pantheon DE (used on
ElementaryOS) was Unity, so that libappindicator would work.  This CL
adds Pantheon as a new base::DesktopEnvironment to solve both of these
issues.

[1] https://crrev.com/0960ecfad7787c492f407054c9a9ba1b7134ef5d

BUG=773233
R=sky@chromium.org
CC=erg@chromium.org

Change-Id: If66f748e69c202d09c9ed6dfc0490bb2ce0d5609