chrome/browser/ui/libgtkui/gtk_ui.cc
@@ -570,6 +570,7 @@ bool GtkUi::GetDefaultUsesSystemTheme() const {
 
   switch (base::nix::GetDesktopEnvironment(env.get())) {
     case base::nix::DESKTOP_ENVIRONMENT_GNOME:
+    case base::nix::DESKTOP_ENVIRONMENT_PANTHEON:
     case base::nix::DESKTOP_ENVIRONMENT_UNITY:
     case base::nix::DESKTOP_ENVIRONMENT_XFCE:
       return true;
