components/os_crypt/key_storage_util_linux.cc
@@ -58,6 +58,7 @@ SelectedLinuxBackend SelectBackend(const std::string& type,
     case base::nix::DESKTOP_ENVIRONMENT_KDE5:
       return SelectedLinuxBackend::KWALLET5;
     case base::nix::DESKTOP_ENVIRONMENT_GNOME:
+    case base::nix::DESKTOP_ENVIRONMENT_PANTHEON:
     case base::nix::DESKTOP_ENVIRONMENT_UNITY:
     case base::nix::DESKTOP_ENVIRONMENT_XFCE:
       return SelectedLinuxBackend::GNOME_ANY;
